@@ -67,33 +67,7 @@ public class VirtualLibraryApplication implements Serializable
 	private transient IOperationsHome operationsHome;
 	private transient IOperations operations;
 	
-	private transient Context environment;	
-	
-	private static final Map externalReferences = new HashMap();
-	
-    // This duplicates data normally in the weblogic.xml file ... but in
-    // standalone mode (i.e., under ServletExec Debugger), we don't have
-    // access to the environment naming context.
-    
-	static
-	{
-		externalReferences.put("ejb/Person", "com.primix.vlib.Person");
-		externalReferences.put("ejb/Book", "com.primix.vlib.Book");
-		externalReferences.put("ejb/BookQuery", "com.primix.vlib.BookQuery");
-		externalReferences.put("ejb/Publisher", "com.primix.vlib.Publisher");
-		externalReferences.put("ejb/Operations", "com.primix.vlib.Operations");
-	}
-	
-	/**
-	 *  When using a standalone servlet container (such as Servlet Exec Debugger),
-	 *  set all the necessary system properties for locating the JNDI naming
-	 *  context and set an additional property, standalone, so that
-	 *  we know.
-	 *
-	 */
-	 
-	private static final boolean standaloneServletContainer 
-		= Boolean.getBoolean("standalone");
+	private transient Context rootNamingContext;	
 	
 	private static final String ATTRIBUTE_NAME = "application";
 	
@@ -193,7 +167,7 @@ public class VirtualLibraryApplication implements Serializable
 	throws ServletException
 	{
 		if (personHome == null)
-			personHome = (IPersonHome)findNamedObject("ejb/Person", IPersonHome.class);
+			personHome = (IPersonHome)findNamedObject("com.primix.vlib.Person", IPersonHome.class);
 		
 		return personHome;	
 	}
@@ -202,7 +176,7 @@ public class VirtualLibraryApplication implements Serializable
 	throws ServletException
 	{
 		if (publisherHome == null)
-		  publisherHome = (IPublisherHome)findNamedObject("ejb/Publisher",
+		  publisherHome = (IPublisherHome)findNamedObject("com.primix.vlib.Publisher",
 		  		IPublisherHome.class);
 		
 		return publisherHome;		
@@ -212,7 +186,7 @@ public class VirtualLibraryApplication implements Serializable
 	throws ServletException
 	{
 		if (bookHome == null)
-			bookHome = (IBookHome)findNamedObject("ejb/Book", IBookHome.class);
+			bookHome = (IBookHome)findNamedObject("com.primix.vlib.Book", IBookHome.class);
 		
 		return bookHome;	
 	}
@@ -221,7 +195,7 @@ public class VirtualLibraryApplication implements Serializable
 	throws ServletException
 	{
 		if (bookQueryHome == null)
-			bookQueryHome = (IBookQueryHome)findNamedObject("ejb/BookQuery",
+			bookQueryHome = (IBookQueryHome)findNamedObject("com.primix.vlib.BookQuery",
 				IBookQueryHome.class);
 		
 		return bookQueryHome;
@@ -231,7 +205,7 @@ public class VirtualLibraryApplication implements Serializable
 	throws ServletException
 	{
 		if (operationsHome == null)
-			operationsHome = (IOperationsHome)findNamedObject("ejb/Operations",
+			operationsHome = (IOperationsHome)findNamedObject("com.primix.vlib.Operations",
 				IOperationsHome.class);
 		
 		return operationsHome;
@@ -275,14 +249,10 @@ public class VirtualLibraryApplication implements Serializable
 	{
 		Object raw;
 		Object result;
-		String resolvedName = name;
 		
 		try
 		{
-			if (standaloneServletContainer)
-				resolvedName = (String)externalReferences.get(name);
-		
-			raw = getEnvironment().lookup(resolvedName);
+			raw = getRootNamingContext().lookup(name);
 			
 			result = PortableRemoteObject.narrow(raw, expectedClass);
 		}
@@ -301,38 +271,23 @@ public class VirtualLibraryApplication implements Serializable
 		return result;
 	}
 	
-	public Context getEnvironment()
+	public Context getRootNamingContext()
 	throws ServletException
 	{
-		InitialContext initial;
-		
-		if (environment == null)
+
+		if (rootNamingContext == null)
 		{
 			try
 			{
-				initial = new InitialContext();
+				rootNamingContext = new InitialContext();
 			}
 			catch (NamingException e)
 			{
 				throw new ServletException("Unable to acquire initial naming context.", e);
 			}
-			
-			try
-			{
-				if (standaloneServletContainer)
-					environment = initial;
-				else	
-					environment = (Context)initial.lookup("java:comp/env");
-			}
-			catch (NamingException e)
-			{
-				throw new ServletException(
-					"Unable to resolve environment naming context from initial context.", 
-					e);
-			}		
 		}
 		
-		return environment;
+		return rootNamingContext;
 	}
 
 	/**
